[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "../binding_core_node/build.rs"
edition = { workspace = true }
license = { workspace = true }
name    = "binding_core_node_v2"
publish = false
version = "0.1.0"

[lib]
bench      = false
crate-type = ["cdylib"]
path       = "../binding_core_node/src/lib.rs"

[features]
api_v1 = []
api_v2 = []
default = ["api_v2", "swc_v2", "plugin"]
plugin = [
  "swc_core/plugin_backend_wasmer",
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_filesystem_cache",
]
swc_v1 = []
swc_v2 = []

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow      = { workspace = true }
backtrace   = { workspace = true }
napi        = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive = { workspace = true, features = ["type-def"] }
par-core    = { workspace = true, features = ["chili"] }
path-clean  = { workspace = true }
rustc-hash  = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true, features = ["unbounded_depth"] }
tracing     = { workspace = true, features = ["release_max_level_info"] }

swc_api_common = { path = "../../crates/swc_api_common" }
swc_core = { path = "../../crates/swc_core", features = [
  "allocator_node",
  "ecma_ast",
  "ecma_minifier",
  "ecma_codegen",
  "ecma_ast_serde",
  "common_concurrent",
  "ecma_helpers_inline",
  "ecma_transforms",
  "ecma_visit",
  "base_node",
  "base_concurrent",
  "base_flow",
  "base_module",
  "base_react_compiler",
] }
swc_malloc = { path = "../../crates/swc_malloc" }
