[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "wasm module for swc"
edition = "2021"
license = "Apache-2.0"
name = "binding_core_wasm"
publish = false
repository = "https://github.com/swc-project/swc.git"
version = "1.3.17"

[lib]
bench = false
crate-type = ["cdylib"]

[features]
default = ["swc_v1"]
swc_v1 = []
swc_v2 = []
# This feature exists to allow cargo operations
plugin = ["swc_core/plugin_transform_host_js"]

[dependencies]
anyhow = "1.0.66"
serde = {version = "1", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"
swc_core = { version = "0.43.15", features = [
  "common_perf",
  "binding_macro_wasm",
  "ecma_transforms",
  "ecma_visit",
] }
tracing = { version = "0.1.37", features = ["max_level_off"] }
wasm-bindgen = {version = "0.2.82", features = [
  "serde-serialize",
  "enable-interning",
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
