[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "wasm module for swc"
edition     = { workspace = true }
license     = { workspace = true }
name        = "binding_core_wasm"
publish     = false
repository  = { workspace = true }
version     = "1.10.8"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]
default = ["swc_v1"]
swc_v1  = []
swc_v2  = []
# This feature exists to allow cargo operations
# [TODO]: this is disabled due to signature mismatch between host_native and host_js,
# which causes build errors like
# .call(&mut self.store, ptr.0, ptr.1)
#   |                  ^^^^ the trait `NativeWasmTypeInto` is not implemented for `u32`
#   |
#   = help: the following other types implement trait `NativeWasmTypeInto`:
#             f32
#             f64
#             i32
#             i64
#             u128
plugin = []

[dependencies]
anyhow = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
swc_core = { workspace = true, features = [
  "ecma_ast_serde",
  "ecma_codegen",
  "binding_macro_wasm",
  "ecma_transforms",
  "ecma_visit",
] }
tracing = { workspace = true, features = ["max_level_off"] }
wasm-bindgen = { workspace = true, features = ["enable-interning"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
