[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Wasm module for the SWC v2 JavaScript API"
edition     = { workspace = true }
license     = { workspace = true }
name        = "binding_core_wasm_v2"
publish     = false
repository  = { workspace = true }
version     = "0.1.0"

[lib]
bench      = false
crate-type = ["cdylib"]
path       = "../binding_core_wasm/src/lib.rs"

[features]
__plugin = []
api_v1   = []
api_v2   = []
default  = ["api_v2", "swc_v2"]
plugin   = []
swc_v1   = []
swc_v2   = []

[dependencies]
anyhow = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
swc_core = { path = "../../crates/swc_core", features = [
  "ecma_ast_serde",
  "ecma_codegen",
  "binding_macro_wasm",
  "ecma_transforms",
  "ecma_visit",
  "ecma_helpers_inline",
  "ecma_lints",
  "base_module",
  "base_react_compiler",
] }
tracing = { workspace = true, features = ["max_level_off"] }
wasm-bindgen = { workspace = true, features = ["enable-interning"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-shear]
ignored = ["getrandom", "anyhow", "serde-wasm-bindgen"]
