[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_html_node"
publish = false
version = "0.1.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { workspace = true, default-features = false }

[dependencies]
anyhow = { workspace = true, default-features = false }
lightningcss = { workspace = true, default-features = false }
napi = { workspace = true, features = [
  "napi3",
  "serde-json",
], default-features = false }
napi-derive = { workspace = true, features = [
  "type-def",
], default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_json = { workspace = true, default-features = false }
swc_atoms = { workspace = true, default-features = false }
swc_common = { workspace = true, features = [
  "diagnostic-serde",
], default-features = false }
swc_config = { workspace = true, features = [
  "regex",
], default-features = false }
swc_css_ast = { workspace = true, default-features = false }
swc_css_codegen = { workspace = true, default-features = false }
swc_css_minifier = { workspace = true, default-features = false }
swc_css_parser = { workspace = true, default-features = false }
swc_error_reporters = { workspace = true, default-features = false }
swc_html = { workspace = true, default-features = false }
swc_html_ast = { workspace = true, features = [
  "serde",
], default-features = false }
swc_html_minifier = { workspace = true, features = ["custom-css-minifier"] }
swc_nodejs_common = { workspace = true, default-features = false }
tracing = { workspace = true, features = [
  "release_max_level_info",
], default-features = false }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
], default-features = false }
