[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_html_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { workspace = true, default-features = false }


[dependencies]
anyhow = { workspace = true, default-features = false }

lightningcss = { workspace = true, default-features = false }

napi = { workspace = true, features = ["napi3", "serde-json"], default-features = false }

napi-derive = { workspace = true, features = ["type-def"], default-features = false }

serde = { workspace = true, features = ["derive"], default-features = false }

serde_json = { workspace = true, default-features = false }

swc_atoms = { path = "../../crates/swc_atoms", default-features = false }

swc_common = { path = "../../crates/swc_common", features = [
  "diagnostic-serde",
] }
swc_config = { path = "../../crates/swc_config", features = ["regex"], default-features = false }

swc_css_ast = { path = "../../crates/swc_css_ast", default-features = false }

swc_css_codegen = { path = "../../crates/swc_css_codegen", default-features = false }

swc_css_minifier = { path = "../../crates/swc_css_minifier", default-features = false }

swc_css_parser = { path = "../../crates/swc_css_parser", default-features = false }

swc_error_reporters = { path = "../../crates/swc_error_reporters", default-features = false }

swc_html = { path = "../../crates/swc_html", default-features = false }

swc_html_ast = { path = "../../crates/swc_html_ast", features = ["serde"], default-features = false }

swc_html_minifier = { path = "../../crates/swc_html_minifier", features = [
  "custom-css-minifier",
] }
swc_nodejs_common = { path = "../../crates/swc_nodejs_common", default-features = false }

tracing = { workspace = true, features = ["release_max_level_info"], default-features = false }

