[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_html_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lightningcss = { workspace = true }
napi = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive = { workspace = true, features = ["type-def"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
swc_atoms = { path = "../../crates/swc_atoms" }
swc_common = { path = "../../crates/swc_common", features = [
  "diagnostic-serde",
] }
swc_config = { path = "../../crates/swc_config", features = ["regex"] }
swc_css_ast = { path = "../../crates/swc_css_ast" }
swc_css_codegen = { path = "../../crates/swc_css_codegen" }
swc_css_minifier = { path = "../../crates/swc_css_minifier" }
swc_css_parser = { path = "../../crates/swc_css_parser" }
swc_error_reporters = { path = "../../crates/swc_error_reporters" }
swc_html = { path = "../../crates/swc_html" }
swc_html_ast = { path = "../../crates/swc_html_ast", features = ["serde"] }
swc_html_minifier = { path = "../../crates/swc_html_minifier", features = [
  "custom-css-minifier",
] }
swc_nodejs_common = { path = "../../crates/swc_nodejs_common" }
tracing = { workspace = true, features = ["release_max_level_info"] }
