[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_js_interop_node"
publish = false
version = "0.1.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]
default = ["swc_v1"]
swc_v1  = ["swc_core/bundler_node_v1"]
swc_v2  = ["swc_core/bundler_node_v2"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
backtrace          = { workspace = true }
napi               = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive        = { workspace = true, features = ["type-def"] }
node_macro_deps    = { path = "../node_macro_deps" }
path-clean         = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true, features = ["unbounded_depth"] }
tracing            = { workspace = true, features = ["release_max_level_info"] }
tracing-chrome     = { workspace = true }
tracing-futures    = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

swc_core = { workspace = true, features = [
  "allocator_node",
  "ecma_ast",
  "ecma_codegen",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_transforms",
  "ecma_visit",
  "base_node",
  "base_concurrent",
] }
swc_interop_babel = { version = "0.1.0" }
swc_interop_nodejs = { version = "0.1.0" }
swc_malloc = { workspace = true }
