[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_minifier_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
backtrace          = { workspace = true }
napi               = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive        = { workspace = true, features = ["type-def"] }
par-core           = { workspace = true, features = ["chili"] }
serde              = { workspace = true, features = ["derive"] }
tracing            = { workspace = true, features = ["release_max_level_info"] }
tracing-chrome     = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


swc_compiler_base = { path = "../../crates/swc_compiler_base", features = [
  "node",
] }
swc_config = { path = "../../crates/swc_config", features = ["regex"] }
swc_core = { path = "../../crates/swc_core", features = [
  "allocator_node",
  "common_concurrent",
  "common_sourcemap",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_minifier",
  "ecma_minifier_concurrent",
  "ecma_transforms",
  "ecma_visit",
] }
swc_error_reporters = { path = "../../crates/swc_error_reporters" }
swc_malloc = { path = "../../crates/swc_malloc" }
swc_nodejs_common = { path = "../../crates/swc_nodejs_common" }
