[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_minifier_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true, default-features = false }


[dependencies]
anyhow = { workspace = true, default-features = false }

backtrace = { workspace = true, default-features = false }

napi = { workspace = true, features = ["napi3", "serde-json"], default-features = false }

napi-derive = { workspace = true, features = ["type-def"], default-features = false }

par-core = { workspace = true, features = ["chili"], default-features = false }

serde = { workspace = true, features = ["derive"], default-features = false }

tracing = { workspace = true, features = ["release_max_level_info"], default-features = false }

tracing-chrome = { workspace = true, default-features = false }

tracing-subscriber = { workspace = true, features = ["env-filter"], default-features = false }



swc_compiler_base = { path = "../../crates/swc_compiler_base", features = [
  "node",
] }
swc_config = { path = "../../crates/swc_config", features = ["regex"], default-features = false }

swc_core = { path = "../../crates/swc_core", features = [
  "allocator_node",
  "common_concurrent",
  "common_sourcemap",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_minifier",
  "ecma_minifier_concurrent",
  "ecma_transforms",
  "ecma_visit",
] }
swc_error_reporters = { path = "../../crates/swc_error_reporters", default-features = false }

swc_malloc = { path = "../../crates/swc_malloc", default-features = false }

swc_nodejs_common = { path = "../../crates/swc_nodejs_common", default-features = false }

