[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "wasm module for swc"
edition     = "2021"
license     = "Apache-2.0"
name        = "binding_minifier_wasm"
publish     = false
repository  = "https://github.com/swc-project/swc.git"
version     = "1.5.24"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]
default = ["swc_v1"]
swc_v1  = []
swc_v2  = []
# This feature exists to allow cargo operations
# [TODO]: this is disabled due to signature mismatch between host_native and host_js,
# which causes build errors like
# .call(&mut self.store, ptr.0, ptr.1)
#   |                  ^^^^ the trait `NativeWasmTypeInto` is not implemented for `u32`
#   |
#   = help: the following other types implement trait `NativeWasmTypeInto`:
#             f32
#             f64
#             i32
#             i64
#             u128
plugin = []

[dependencies]
anyhow = "1.0.66"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
swc_core = { version = "0.92.6", features = [
  "ecma_ast_serde",
  "ecma_codegen",
  "binding_macro_wasm",
  "ecma_transforms",
  "ecma_visit",
] }
tracing = { version = "0.1.37", features = ["max_level_off"] }
wasm-bindgen = { version = "0.2.82", features = ["enable-interning"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
