[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Node.js support helpers compiled to WebAssembly"
edition     = { workspace = true }
license     = { workspace = true }
name        = "binding_nodejs_support_wasm"
publish     = false
repository  = { workspace = true }
version     = "1.15.46"

[lib]
bench      = false
crate-type = ["cdylib"]

[features]
nightly = ["swc_ts_fast_strip/nightly"]

[dependencies]
anyhow = { workspace = true }
js-sys = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
swc_common = { path = "../../crates/swc_common" }
swc_ecma_ast = { path = "../../crates/swc_ecma_ast" }
swc_ecma_parser = { path = "../../crates/swc_ecma_parser" }
swc_ecma_visit = { path = "../../crates/swc_ecma_visit" }
swc_error_reporters = { path = "../../crates/swc_error_reporters" }
swc_ts_fast_strip = { path = "../../crates/swc_ts_fast_strip", features = [
  "wasm-bindgen",
] }
tracing = { workspace = true, features = ["max_level_off"] }
unicode-width = { workspace = true }
wasm-bindgen = { workspace = true, features = ["enable-interning"] }
wasm-bindgen-futures = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
