[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
license = "Apache-2.0"
name    = "binding_react_compiler_node"
publish = false
version = "0.2.0"

[lib]
bench      = false
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }

[dependencies]
backtrace     = { workspace = true }
napi          = { workspace = true, features = ["napi3", "serde-json"] }
napi-derive   = { workspace = true, features = ["type-def"] }
serde         = { workspace = true, features = ["derive"] }
tracing       = { workspace = true, features = ["release_max_level_info"] }


swc_core = { path = "../../crates/swc_core", features = [
  "allocator_node",
  "common_sourcemap",
  "ecma_ast",
  "ecma_parser",
] }
swc_ecma_react_compiler = { path = "../../crates/swc_ecma_react_compiler" }
swc_malloc = { path = "../../crates/swc_malloc" }
